# polymarket_cli

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.json  pyproject.toml
docs/: COMMANDS.md
docs/superpowers/plans/: 2026-06-25-poly-cli-refactor-p0-p1.md
docs/superpowers/specs/: 2026-06-25-poly-cli-design.md
poly/: __init__.py  cli.py  config.py  context.py  market.py  orders.py  output.py  pagination.py  trade.py
poly/groups/: clob_trade.py  data.py  markets.py  setup.py  wallet.py
tests/: test_buy_sell.py  test_cli.py  test_cli_smoke.py  test_config.py  test_data.py  test_market.py  test_markets.py  test_orders.py  test_setup.py  test_trade.py  test_wallet.py
