[project]
name = "poly-cli"
version = "0.1.0"
description = "Minimal CLI to place buy/sell orders on Polymarket from your deposit wallet."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polymarket-client==0.1.0b9",
    "typer>=0.12",
    "eth-account>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
poly = "poly.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poly"]

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
testpaths = ["tests"]
